// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`electron mirror 1`] = `
{
  "mac": [],
}
`;

exports[`electronDist 1`] = `"corrupted Electron dist"`;

exports[`invalid electron mirror 1`] = `"ERR_NON_2XX_3XX_RESPONSE"`;

exports[`multiple asar resources 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`multiple asar resources 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
    "Resources/extraAsar.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
    "Resources/subdir/extraAsar2.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`multiple asar resources 3`] = `
[
  "app.asar",
  "extraAsar.asar",
  "icon.icns",
  "subdir/extraAsar2.asar",
]
`;

exports[`one-package 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0-mac.zip",
          },
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0.dmg",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`one-package 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleDocumentTypes": [
    {
      "CFBundleTypeName": "Folders",
      "CFBundleTypeRole": "Editor",
      "LSItemContentTypes": [
        "public.folder",
      ],
    },
    {
      "CFBundleTypeExtensions": [
        "foo",
      ],
      "CFBundleTypeIconFile": "foo.icns",
      "CFBundleTypeName": "Foo",
      "CFBundleTypeRole": "Viewer",
      "LSHandlerRank": "Default",
    },
    {
      "CFBundleTypeExtensions": [
        "boo",
      ],
      "CFBundleTypeIconFile": "icon.icns",
      "CFBundleTypeName": "Boo",
      "CFBundleTypeRole": "Shell",
      "LSHandlerRank": "Owner",
      "LSTypeIsPackage": true,
    },
    {
      "CFBundleTypeExtensions": [
        "bar",
      ],
      "CFBundleTypeIconFile": "someFoo.icns",
      "CFBundleTypeName": "Bar",
      "CFBundleTypeRole": "Shell",
      "LSHandlerRank": "Default",
    },
  ],
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "foo",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "LSMinimumSystemVersion": "10.12.0",
  "LSUIElement": true,
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 1`] = `
{
  "mac": [
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0-mac-arm64.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-mac-arm64.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "universal",
      "file": "TestApp-1.1.0-mac-universal.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-mac-universal.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac-x64.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-mac-x64.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-arm64.dmg",
          },
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-arm64.zip",
          },
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-universal.dmg",
          },
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-universal.zip",
          },
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-x64.dmg",
          },
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-x64.zip",
          },
        ],
        "path": "TestApp-1.1.0-mac-x64.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.1.0-mac-arm64.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-mac-arm64.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-arm64.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "universal",
      "file": "TestApp-1.1.0-mac-universal.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-mac-universal.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-universal.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac-x64.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "TestApp-1.1.0-mac-x64.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-x64.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`two-package 2`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 3`] = `
[
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`two-package 4`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 5`] = `
[
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`two-package 6`] = `
{
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 7`] = `
[
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`yarn two package.json w/ native module 1`] = `
{
  "mac": [
    {
      "arch": "universal",
      "file": "test-app-two-native-modules-1.1.1-universal-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "test-app-two-native-modules-1.1.1-universal-mac.zip.blockmap",
      "safeArtifactName": "test-app-two-native-modules-1.1.1-universal-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`yarn two package.json w/ native module 2`] = `
{
  "CFBundleDisplayName": "test-app-two-native-modules",
  "CFBundleExecutable": "test-app-two-native-modules",
  "CFBundleIconFile": "electron.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp2",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "test-app-two-native-modules",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.1",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`yarn two package.json w/ native module 3`] = `
{
  "files": {
    "index.html": {
      "size": "<size>",
    },
    "index.js": {
      "size": "<size>",
    },
    "node_modules": {
      "files": {
        "bindings": {
          "files": {
            "LICENSE.md": {
              "size": "<size>",
            },
            "bindings.js": {
              "size": "<size>",
            },
            "package.json": {
              "size": "<size>",
            },
          },
        },
        "debug": {
          "files": {
            "LICENSE": {
              "size": "<size>",
            },
            "dist": {
              "files": {
                "debug.js": {
                  "size": "<size>",
                },
              },
            },
            "package.json": {
              "size": "<size>",
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": "<size>",
                },
                "common.js": {
                  "size": "<size>",
                },
                "index.js": {
                  "size": "<size>",
                },
                "node.js": {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "file-uri-to-path": {
          "files": {
            "History.md": {
              "size": "<size>",
            },
            "LICENSE": {
              "size": "<size>",
            },
            "index.js": {
              "size": "<size>",
            },
            "package.json": {
              "size": "<size>",
            },
          },
        },
        "ms": {
          "files": {
            "index.js": {
              "size": "<size>",
            },
            "license.md": {
              "size": "<size>",
            },
            "package.json": {
              "size": "<size>",
            },
          },
        },
        "node-addon-api": {
          "files": {
            "LICENSE.md": {
              "size": "<size>",
            },
            "common.gypi": {
              "size": "<size>",
            },
            "except.gypi": {
              "size": "<size>",
            },
            "index.js": {
              "size": "<size>",
            },
            "napi-inl.deprecated.h": {
              "size": "<size>",
            },
            "napi-inl.h": {
              "size": "<size>",
            },
            "napi.h": {
              "size": "<size>",
            },
            "node_addon_api.gyp": {
              "size": "<size>",
            },
            "node_api.gyp": {
              "size": "<size>",
            },
            "noexcept.gypi": {
              "size": "<size>",
            },
            "nothing.c": {
              "size": "<size>",
            },
            "package-support.json": {
              "size": "<size>",
            },
            "package.json": {
              "size": "<size>",
            },
            "tools": {
              "files": {
                "README.md": {
                  "size": "<size>",
                },
                "check-napi.js": {
                  "size": "<size>",
                },
                "clang-format.js": {
                  "size": "<size>",
                },
                "conversion.js": {
                  "executable": true,
                  "size": "<size>",
                },
                "eslint-format.js": {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "node-mac-permissions": {
          "files": {
            ".prettierrc": {
              "size": "<size>",
              "unpacked": true,
            },
            "LICENSE": {
              "size": "<size>",
              "unpacked": true,
            },
            "build": {
              "files": {
                "Release": {
                  "files": {
                    "permissions.node": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
              },
            },
            "index.js": {
              "size": "<size>",
              "unpacked": true,
            },
            "node_modules": {
              "files": {
                "node-addon-api": {
                  "files": {
                    "LICENSE.md": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "common.gypi": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "except.gypi": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "index.js": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "napi-inl.deprecated.h": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "napi-inl.h": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "napi.h": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "node_api.gyp": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "noexcept.gypi": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "nothing.c": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "package-support.json": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "package.json": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "tools": {
                      "files": {
                        "README.md": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "check-napi.js": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "clang-format.js": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "conversion.js": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                      },
                    },
                  },
                },
              },
            },
            "package.json": {
              "size": "<size>",
              "unpacked": true,
            },
            "permissions.mm": {
              "size": "<size>",
              "unpacked": true,
            },
          },
        },
        "node-pty": {
          "files": {
            "LICENSE": {
              "size": "<size>",
              "unpacked": true,
            },
            "build": {
              "files": {
                "Release": {
                  "files": {
                    "node-addon-api": {
                      "files": {
                        "node_addon_api_except.stamp": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                      },
                    },
                    "pty.node": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "spawn-helper": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
              },
            },
            "deps": {
              "files": {
                ".editorconfig": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "winpty": {
                  "files": {
                    ".drone.yml": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "LICENSE": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "Makefile": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "README.md": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "RELEASES.md": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "VERSION.txt": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "configure": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "misc": {
                      "files": {
                        "ConinMode.ps1": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "DebugClient.py": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "DebugServer.py": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "DumpLines.py": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "EnableExtendedFlags.txt": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "Font-Report-June2016": {
                          "files": {
                            "CP437-Consolas.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "CP437-Lucida.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "CP932.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "CP936.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "CP949.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "CP950.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "MinimumWindowWidths.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Results.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Windows10SetFontBugginess.txt": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                          },
                        },
                        "FormatChar.h": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "IdentifyConsoleWindow.ps1": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "MouseInputNotes.txt": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "Notes.txt": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "Spew.py": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "build32.sh": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "build64.sh": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "color-test.sh": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "font-notes.txt": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                      },
                    },
                    "ship": {
                      "files": {
                        "build-pty4j-libpty.bat": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "common_ship.py": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "make_msvc_package.py": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "ship.py": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                      },
                    },
                    "src": {
                      "files": {
                        "agent": {
                          "files": {
                            "Agent.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "AgentCreateDesktop.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "ConsoleFont.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "ConsoleInput.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "ConsoleInputReencoding.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "ConsoleLine.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Coord.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "DebugShowInput.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "DefaultInputMap.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "DsrSender.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "EventLoop.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "InputMap.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "LargeConsoleRead.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "NamedPipe.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Scraper.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "SimplePool.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "SmallRect.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Terminal.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "UnicodeEncoding.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Win32Console.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Win32ConsoleBuffer.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                          },
                        },
                        "configurations.gypi": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                        "include": {
                          "files": {
                            "winpty.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "winpty_constants.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                          },
                        },
                        "libwinpty": {
                          "files": {
                            "AgentLocation.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "LibWinptyException.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "WinptyInternal.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                          },
                        },
                        "shared": {
                          "files": {
                            "AgentMsg.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "BackgroundDesktop.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Buffer.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "DebugClient.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "GenRandom.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "GetCommitHash.bat": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Mutex.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "OsModule.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "OwnedHandle.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "PrecompiledHeader.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "StringBuilder.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "StringUtil.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "TimeMeasurement.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "UnixCtrlChars.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "UpdateGenVersion.bat": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "WindowsSecurity.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "WindowsVersion.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "WinptyAssert.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "WinptyException.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "WinptyVersion.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "winpty_snprintf.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                          },
                        },
                        "unix-adapter": {
                          "files": {
                            "InputHandler.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "OutputHandler.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "Util.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                            "WakeupFd.h": {
                              "size": "<size>",
                              "unpacked": true,
                            },
                          },
                        },
                        "winpty.gyp": {
                          "size": "<size>",
                          "unpacked": true,
                        },
                      },
                    },
                    "vcbuild.bat": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
              },
            },
            "lib": {
              "files": {
                "conpty_console_list_agent.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "conpty_console_list_agent.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "eventEmitter2.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "eventEmitter2.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "eventEmitter2.test.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "eventEmitter2.test.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "index.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "index.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "interfaces.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "interfaces.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "shared": {
                  "files": {
                    "conout.js": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "conout.js.map": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
                "terminal.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "terminal.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "terminal.test.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "terminal.test.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "testUtils.test.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "testUtils.test.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "types.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "types.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "unixTerminal.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "unixTerminal.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "unixTerminal.test.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "unixTerminal.test.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "utils.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "utils.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsConoutConnection.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsConoutConnection.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsPtyAgent.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsPtyAgent.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsPtyAgent.test.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsPtyAgent.test.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsTerminal.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsTerminal.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsTerminal.test.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsTerminal.test.js.map": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "worker": {
                  "files": {
                    "conoutSocketWorker.js": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "conoutSocketWorker.js.map": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
              },
            },
            "node-addon-api": {
              "files": {
                "node_addon_api.Makefile": {
                  "size": "<size>",
                  "unpacked": true,
                },
              },
            },
            "package.json": {
              "size": "<size>",
              "unpacked": true,
            },
            "scripts": {
              "files": {
                "post-install.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "publish.js": {
                  "size": "<size>",
                  "unpacked": true,
                },
              },
            },
            "src": {
              "files": {
                "conpty_console_list_agent.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "eventEmitter2.test.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "eventEmitter2.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "index.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "interfaces.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "shared": {
                  "files": {
                    "conout.ts": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
                "terminal.test.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "terminal.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "testUtils.test.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "tsconfig.json": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "types.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "unixTerminal.test.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "unixTerminal.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "utils.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "win": {
                  "files": {
                    "path_util.h": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
                "windowsConoutConnection.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsPtyAgent.test.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsPtyAgent.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsTerminal.test.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "windowsTerminal.ts": {
                  "size": "<size>",
                  "unpacked": true,
                },
                "worker": {
                  "files": {
                    "conoutSocketWorker.ts": {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
    "package.json": {
      "size": "<size>",
    },
  },
}
`;

exports[`yarn two package.json w/ native module 4`] = `
[
  "app.asar",
  "electron.icns",
  "app.asar.unpacked/node_modules/node-pty/LICENSE",
  {
    "content": "{
  "name": "node-pty",
  "description": "Fork pseudoterminals in Node.JS",
  "author": {
    "name": "Microsoft Corporation"
  },
  "version": "1.1.0-beta14",
  "license": "MIT",
  "main": "./lib/index.js",
  "types": "./typings/node-pty.d.ts",
  "repository": {
    "type": "git",
    "url": "git://github.com/microsoft/node-pty.git"
  },
  "files": [
    "binding.gyp",
    "lib/",
    "scripts/",
    "src/",
    "deps/",
    "typings/"
  ],
  "homepage": "https://github.com/microsoft/node-pty",
  "dependencies": {
    "node-addon-api": "^7.1.0"
  },
  "devDependencies": {
    "@types/mocha": "^7.0.2",
    "@types/node": "12",
    "@typescript-eslint/eslint-plugin": "^2.27.0",
    "@typescript-eslint/parser": "^2.27.0",
    "cross-env": "^5.1.4",
    "eslint": "^6.8.0",
    "mocha": "10",
    "node-gyp": "^10.0.1",
    "ps-list": "^6.0.0",
    "typescript": "^3.8.3"
  }
}",
    "name": "app.asar.unpacked/node_modules/node-pty/package.json",
  },
  "app.asar.unpacked/node_modules/node-pty/src/conpty_console_list_agent.ts",
  "app.asar.unpacked/node_modules/node-pty/src/eventEmitter2.test.ts",
  "app.asar.unpacked/node_modules/node-pty/src/eventEmitter2.ts",
  "app.asar.unpacked/node_modules/node-pty/src/index.ts",
  "app.asar.unpacked/node_modules/node-pty/src/interfaces.ts",
  "app.asar.unpacked/node_modules/node-pty/src/terminal.test.ts",
  "app.asar.unpacked/node_modules/node-pty/src/terminal.ts",
  "app.asar.unpacked/node_modules/node-pty/src/testUtils.test.ts",
  "app.asar.unpacked/node_modules/node-pty/src/tsconfig.json",
  "app.asar.unpacked/node_modules/node-pty/src/types.ts",
  "app.asar.unpacked/node_modules/node-pty/src/unixTerminal.test.ts",
  "app.asar.unpacked/node_modules/node-pty/src/unixTerminal.ts",
  "app.asar.unpacked/node_modules/node-pty/src/utils.ts",
  "app.asar.unpacked/node_modules/node-pty/src/windowsConoutConnection.ts",
  "app.asar.unpacked/node_modules/node-pty/src/windowsPtyAgent.test.ts",
  "app.asar.unpacked/node_modules/node-pty/src/windowsPtyAgent.ts",
  "app.asar.unpacked/node_modules/node-pty/src/windowsTerminal.test.ts",
  "app.asar.unpacked/node_modules/node-pty/src/windowsTerminal.ts",
  "app.asar.unpacked/node_modules/node-pty/src/worker/conoutSocketWorker.ts",
  "app.asar.unpacked/node_modules/node-pty/src/win/path_util.h",
  "app.asar.unpacked/node_modules/node-pty/src/shared/conout.ts",
  "app.asar.unpacked/node_modules/node-pty/scripts/post-install.js",
  "app.asar.unpacked/node_modules/node-pty/scripts/publish.js",
  "app.asar.unpacked/node_modules/node-pty/node-addon-api/node_addon_api.Makefile",
  "app.asar.unpacked/node_modules/node-pty/lib/conpty_console_list_agent.js",
  "app.asar.unpacked/node_modules/node-pty/lib/conpty_console_list_agent.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/eventEmitter2.js",
  "app.asar.unpacked/node_modules/node-pty/lib/eventEmitter2.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/eventEmitter2.test.js",
  "app.asar.unpacked/node_modules/node-pty/lib/eventEmitter2.test.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/index.js",
  "app.asar.unpacked/node_modules/node-pty/lib/index.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/interfaces.js",
  "app.asar.unpacked/node_modules/node-pty/lib/interfaces.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/terminal.js",
  "app.asar.unpacked/node_modules/node-pty/lib/terminal.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/terminal.test.js",
  "app.asar.unpacked/node_modules/node-pty/lib/terminal.test.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/testUtils.test.js",
  "app.asar.unpacked/node_modules/node-pty/lib/testUtils.test.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/types.js",
  "app.asar.unpacked/node_modules/node-pty/lib/types.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/unixTerminal.js",
  "app.asar.unpacked/node_modules/node-pty/lib/unixTerminal.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/unixTerminal.test.js",
  "app.asar.unpacked/node_modules/node-pty/lib/unixTerminal.test.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/utils.js",
  "app.asar.unpacked/node_modules/node-pty/lib/utils.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsConoutConnection.js",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsConoutConnection.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsPtyAgent.js",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsPtyAgent.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsPtyAgent.test.js",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsPtyAgent.test.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsTerminal.js",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsTerminal.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsTerminal.test.js",
  "app.asar.unpacked/node_modules/node-pty/lib/windowsTerminal.test.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/worker/conoutSocketWorker.js",
  "app.asar.unpacked/node_modules/node-pty/lib/worker/conoutSocketWorker.js.map",
  "app.asar.unpacked/node_modules/node-pty/lib/shared/conout.js",
  "app.asar.unpacked/node_modules/node-pty/lib/shared/conout.js.map",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/LICENSE",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/Makefile",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/README.md",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/RELEASES.md",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/VERSION.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/configure",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/vcbuild.bat",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/configurations.gypi",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/winpty.gyp",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/unix-adapter/InputHandler.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/unix-adapter/OutputHandler.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/unix-adapter/Util.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/unix-adapter/WakeupFd.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/AgentMsg.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/BackgroundDesktop.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/Buffer.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/DebugClient.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/GenRandom.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/GetCommitHash.bat",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/Mutex.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/OsModule.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/OwnedHandle.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/PrecompiledHeader.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/StringBuilder.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/StringUtil.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/TimeMeasurement.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/UnixCtrlChars.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/UpdateGenVersion.bat",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/WindowsSecurity.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/WindowsVersion.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/WinptyAssert.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/WinptyException.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/WinptyVersion.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/shared/winpty_snprintf.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/libwinpty/AgentLocation.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/libwinpty/LibWinptyException.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/libwinpty/WinptyInternal.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/include/winpty.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/include/winpty_constants.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/Agent.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/AgentCreateDesktop.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/ConsoleFont.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/ConsoleInput.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/ConsoleInputReencoding.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/ConsoleLine.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/Coord.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/DebugShowInput.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/DefaultInputMap.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/DsrSender.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/EventLoop.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/InputMap.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/LargeConsoleRead.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/NamedPipe.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/Scraper.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/SimplePool.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/SmallRect.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/Terminal.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/UnicodeEncoding.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/Win32Console.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/src/agent/Win32ConsoleBuffer.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/ship/build-pty4j-libpty.bat",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/ship/common_ship.py",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/ship/make_msvc_package.py",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/ship/ship.py",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/ConinMode.ps1",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/DebugClient.py",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/DebugServer.py",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/DumpLines.py",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/EnableExtendedFlags.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/FormatChar.h",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/IdentifyConsoleWindow.ps1",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/MouseInputNotes.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Notes.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Spew.py",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/build32.sh",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/build64.sh",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/color-test.sh",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/font-notes.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/CP437-Consolas.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/CP437-Lucida.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/CP932.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/CP936.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/CP949.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/CP950.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/MinimumWindowWidths.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/Results.txt",
  "app.asar.unpacked/node_modules/node-pty/deps/winpty/misc/Font-Report-June2016/Windows10SetFontBugginess.txt",
  "app.asar.unpacked/node_modules/node-pty/build/Release/pty.node",
  "app.asar.unpacked/node_modules/node-pty/build/Release/spawn-helper",
  "app.asar.unpacked/node_modules/node-pty/build/Release/node-addon-api/node_addon_api_except.stamp",
  "app.asar.unpacked/node_modules/node-mac-permissions/LICENSE",
  "app.asar.unpacked/node_modules/node-mac-permissions/index.js",
  {
    "content": "{
  "name": "node-mac-permissions",
  "version": "2.3.0",
  "description": "A native node module to manage system permissions on macOS",
  "main": "index.js",
  "types": "index.d.ts",
  "repository": {
    "type": "git",
    "url": "git+https://github.com/codebytere/node-mac-permissions.git"
  },
  "author": "Shelley Vohr <shelley.vohr@gmail.com>",
  "license": "MIT",
  "homepage": "https://github.com/codebytere/node-mac-permissions#readme",
  "dependencies": {
    "bindings": "^1.5.0",
    "node-addon-api": "^3.0.2"
  },
  "devDependencies": {
    "chai": "^4.3.6",
    "clang-format": "1.8.0",
    "husky": "^8.0.1",
    "lint-staged": "^12.4.1",
    "mocha": "^10.0.0",
    "node-gyp": "^9.0.0",
    "prettier": "^2.6.2"
  },
  "lint-staged": {
    "*.js": [
      "prettier --write"
    ],
    "*.mm": [
      "clang-format -i"
    ]
  },
  "os": [
    "darwin"
  ]
}",
    "name": "app.asar.unpacked/node_modules/node-mac-permissions/package.json",
  },
  "app.asar.unpacked/node_modules/node-mac-permissions/permissions.mm",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/LICENSE.md",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/common.gypi",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/except.gypi",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/index.js",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/napi-inl.deprecated.h",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/napi-inl.h",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/napi.h",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/node_api.gyp",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/noexcept.gypi",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/nothing.c",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/package-support.json",
  {
    "content": "{
  "description": "Node.js API (Node-API)",
  "devDependencies": {
    "benchmark": "^2.1.4",
    "bindings": "^1.5.0",
    "clang-format": "^1.4.0",
    "fs-extra": "^9.0.1",
    "pre-commit": "^1.2.2",
    "safe-buffer": "^5.1.1"
  },
  "directories": {},
  "gypfile": false,
  "homepage": "https://github.com/nodejs/node-addon-api",
  "license": "MIT",
  "main": "index.js",
  "name": "node-addon-api",
  "optionalDependencies": {},
  "readme": "README.md",
  "repository": {
    "type": "git",
    "url": "git://github.com/nodejs/node-addon-api.git"
  },
  "files": [
    "*.{c,h,gyp,gypi}",
    "package-support.json",
    "tools/"
  ],
  "pre-commit": "lint",
  "version": "3.2.1",
  "support": true
}",
    "name": "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/package.json",
  },
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/tools/README.md",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/tools/check-napi.js",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/tools/clang-format.js",
  "app.asar.unpacked/node_modules/node-mac-permissions/node_modules/node-addon-api/tools/conversion.js",
  "app.asar.unpacked/node_modules/node-mac-permissions/build/Release/permissions.node",
]
`;
